--- a/001.HTML학습/02.info_PJ/css/sub.css
+++ b/001.HTML학습/02.info_PJ/css/sub.css
@@ -7,7 +7,50 @@
     이것의 이점은 (http request)이 줄어들어 html의 랜더링 속도가 향상된다.
  */
 
-.sub-title{
-    font-size: 50px;
-    color: red;
+/* 서브페이지 타이틀 */
+h2.sub-title{
+    /* 글자색 : color (=c) */
+    color: #11c535;
+    /* color: hsla(134, 87%, 43%, 0.918); */
+
+    /* 글자크기 : font-size (=fz) */
+    font-size: 38px;
+    /* 글자두께 : font-weight (=fw) */
+    font-weight: normal;
+
+    /* 글자체 : font-family - 콤마로 구분된 글자체는 대체제임 */
+    /* 앞의 글자체가 없으면 뒤의 글자체가 적용됨. 만약 모두 없으면 브라우저 기본체가 적용됨 */
+    /* font-family: '맑은 고딕', '궁서', '굴림', '돋움'; */
+    font-family: 'Bagel Fat One', system-ui;
+
+    /* 텍스트정렬 : text-align:center (=tac 중앙정렬) */
+    text-align: center;
+
+    /* 글자 그림자 : text-shadow */ 
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.35);
+
+
+
+    /* 박스 테두리 - border (=bd 두께/종류/색상)
+        - 두께 : 선 두께
+        - 종류 : 선 종류 (solid 실선, dotted 점선, dashed 데쉬선, ...)
+        - 색상 : 테두리 색상
+    */
+    border: 1px solid darkorchid;
+
+    /* 둥근모서리 - border-radius (=brad)*/
+    border-radius: 20px;
+
+    /* 패딩 - p */
+    padding: 20px;
+
+    /* 배경색 : bgc */
+    background-color: red;
+
+    /* 배경이미지 : bgi */
+    background-image: url(../images/);
+
+    /* 외부 CSS에서 이미지 경로 주의! */
+    /* html파일이 아닌 CSS파일 위치에서 상대 경로를 잡아야 이미지가 나온다 */
+    
 }
