--- a/001.HTML학습/02.info_PJ/css/sub.css
+++ b/001.HTML학습/02.info_PJ/css/sub.css
@@ -45,12 +45,46 @@ h2.sub-title{
     padding: 20px;
 
     /* 배경색 : bgc */
-    background-color: red;
+    background-color: #fff;
 
-    /* 배경이미지 : bgi */
-    background-image: url(../images/);
+    /* 배경이미지 : (=bgi 개별적으로 줌) */
+    /* background-image: url(../images/titbg4.jpg); */
+
+
+    /* 배경 반복 여부 */
+    background-repeat: no-repeat;
+
+    /* 배경 고정 */
+
+    /* 배경 위치 (=bgp) */
+    background-position: center;
+
+    /* 배경 크기 (=bgz) */
+    /* cover는 박스를 비율유지하여 빈틈없이 채움 */
+    background-size: cover;
 
     /* 외부 CSS에서 이미지 경로 주의! */
     /* html파일이 아닌 CSS파일 위치에서 상대 경로를 잡아야 이미지가 나온다 */
-    
+
+}
+
+/* 정치 */
+.politics{
+    background-image: url(../images/titbg1.jpg);
+}
+/* 경제 */
+.economics{
+    background-image: url(../images/titbg2.jpg);
+}
+/* 사회 */
+.social{
+    background-image: url(../images/titbg3.jpg);
+}
+/* IT/과학 */
+.it{
+    background-image: url(../images/titbg4.jpg);
+}
+/* TV/연예 */
+.tv{
+    background-image: url(../images/titbg5.jpg);
 }
