--- a/001.HTML학습/02.info_PJ/css/common.css
+++ b/001.HTML학습/02.info_PJ/css/common.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 /* Info PJ 공통 CSS - common.css */
 
 /* 웹폰트 구글CDN(Content Delivery Network) */
@@ -116,6 +117,12 @@ footer.part {
 /* 타이틀 */
 .tit {
   font-family: "Diphylleia", serif;
+  font-size: 45px;
+  margin: 0;
+  text-shadow: 3px 3px 2px #999;
+  color: darkblue;
+  font-family: "Diphylleia", serif;
+  margin-bottom: 9px;
 }
 /* 메뉴 */
 .menu {
