--- a/001.HTML학습/02.info_PJ/css/sub.css
+++ b/001.HTML학습/02.info_PJ/css/sub.css
@@ -105,21 +105,50 @@ h2.sub-title{
 
 /* 언론사 로고 */
 .press-logo img{
-    height: 32px;
     /* 이미지는 가로/세로 중 하나만 주면 비율을 유지하며 변경된다. */
 }
 
 /* 기사 타이틀 */
 .article-title{
     font-size: 30px;
+    color: #111; 
 }
 
 /* 기사 이미지박스 */
 .article-picture{
-    margin: 0;
+    margin: 20px 0;
 }
 
 /* 기사 이미지 */
 .article-picture img{
-    width: 100%; 
+    width: 100%;
+    padding-bottom: 15px;
+}
+
+/* 기사 이미지 설명 */
+.article-picture figcaption {
+    /* tac - 글자중앙정렬 */
+    text-align: center;
+    padding: 0 5px;
+    /* font-size: 15px; */
+}
+
+/* 기사 이미지 설명 글자크기 변경 */
+.article-picture figcaption {
+    font-size: 15px;
+    /* small에 글자크기가 지정되어 있으므로 여기에서 글자크기를 변경해야 반영된다. */
+}
+
+/* 기사 내용 */
+.contents p{
+    /* 글자 크기 : fz */
+    font-size: 17px;
+    /* 줄간격 : lh
+    line-height 줄간격은 글자의 중앙에서 위아래 높이값을 말하며 글자는 중앙에 흐른다.
+    단위는 없을 경우 글자크기의 배수로 세팅됨
+    */
+
+    line-height: 1.56;
+    /* 글자색 */
+    color: #333; 
 }
