--- a/001.HTML학습/02.info_PJ/css/common.css
+++ b/001.HTML학습/02.info_PJ/css/common.css
@@ -145,9 +145,9 @@ footer.part {
 /* 메뉴링크 오버시
 :hover는 가상클래스(마우스 오버시) */
 .menu a + a:hover {
-  text-decoration: overline;
-  text-decoration-style: wavy;
-  color: hotpink;
+  text-decoration: underline;
+  text-decoration-style: double;
+  color: rgb(135, 22, 255);
 }
 
 /* 
