--- a/900.인트로사이트/css/main.css
+++ b/900.인트로사이트/css/main.css
@@ -7,7 +7,7 @@ html,body{
     height: 100%;
 }
 body{
-    background-image: url(../../001.HTML학습/02.info_PJ/images/index_FrontEnd.avif) center/cover;
+    background-image: url(../../001.HTML학습/02.info_PJ/images/index_FrontEnd.jpg) center/cover;
     /* background-image: 
     linear-gradient(to bottom, rgb(205, 255, 227), rgb(247, 206, 255)); */
 
