--- a/001.HTML학습/02.info_PJ/css/sub.css
+++ b/001.HTML학습/02.info_PJ/css/sub.css
@@ -181,16 +181,16 @@ h2.sub-title{
     font-weight: bold;
 }
 
-/* 인용구박스 */
-.quote-box{
+/* 구분박스 공통 */
+.bd-box{
     border-top: 2px dashed #ccc;
     border-bottom: 2px dashed #111;
     margin: 20px 0;
     padding: 15px 0;
 }
 
-/* 인용구제목 */
-.quote-box h4{
+/* 구분박스 제목 */
+.bd-box h4{
     /* 기본 display가 block에 이어서 글씨만큼 크기를 가지려면 inline-block으로 바꿔야한다. */
     display: inline-block;
     font-size: 20px;
@@ -247,4 +247,22 @@ h2.sub-title{
     border-radius: 10px;
     /* 박스 그림자 */
     box-shadow: 0px 0px 4px #555;
+}
+
+/* 동영상 박스 : 유튜브 iframe */
+.mvbox {
+/*  비율유지 박스 설정
+    aspect-ratio : 가로비율/세로비율
+    주의 -> 가로 세로가 유동적이므로 특정 값을 세팅하지 말것 */
+    aspect-ratio: 16/9;
+
+    /* height: 550px; */
+    /* div와 같은 block요소는 width설정을 하지 않으면 width: auto로 자동설정됨 */
+}
+
+/* 아이프레임 */
+.mvbox iframe{
+    border: none;   /*=bdn*/
+    width: 100%;    /* 동영상 가로크기 키우는거 */
+    height: 100%;   /* 동영상 세로크기 키우는거 */
 }
