--- a/001.HTML학습/02.info_PJ/css/common.css
+++ b/001.HTML학습/02.info_PJ/css/common.css
@@ -2,7 +2,8 @@
 /* Info PJ 공통 CSS - common.css */
 
 /* 웹폰트 구글CDN(Content Delivery Network) */
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Bagel+Fat+One&family=Diphylleia&family=Orbit&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Bagel+Fat+One&family=Diphylleia&family=Orbit&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Bagel+Fat+One&family=Black+And+White+Picture&family=Diphylleia&family=Orbit&display=swap");
 
 /* 
     기사본문용    font-family: "Noto Sans KR", sans-serif;
