--- a/001.HTML학습/02.info_PJ/css/sub.css
+++ b/001.HTML학습/02.info_PJ/css/sub.css
@@ -295,3 +295,47 @@ h2.sub-title{
     box-shadow: 0 0 10px darkblue;
     /* box-shadow: x y blur (spread) color; */
 }
+
+/* 오늘의 작품 & 느낌 */
+.work{
+    /* 글자크기, 글자정렬은 자식요소로 상속됨 */
+    text-align: center;
+    /* 그라데이션
+       [선형 그라데이션 : linear-gradient]
+         linear-gradient(방향, 색1, 색2, ...);
+         linear-gradient(방향, 색1, 몇%, 색2, 명%, ...);
+         linear-gradient(각도, 색1, 몇%, 색2, 명%, ...);
+       - 옵션
+         1. 방향 : to top, to bottom, to left, to right
+         2. 각도 : 각도deg
+         3. 콤마로 나열된 색상 뒤에 %수치를 쓰면 비율조정 가능
+     */
+    /* background-image: linear-gradient(to right, red, blue, yellow); */
+    /* background-image: linear-gradient(to bottom, red 5%, blue 20%, blue 80%, yellow); */
+    /* background-image: linear-gradient(-45deg, red 5%, blue 20%, blue 80%, yellow); */
+    background-image: linear-gradient(-45deg, rgb(255, 127, 127) 10%, rgb(248, 246, 206) 50%, rgb(255, 174, 0));
+
+    /* padding */
+    padding: 1px;
+    /* 
+    부모박스에 패딩이 없는 상태에서 첫번째 자신 블록박스의 마진은 부모 바깥쪽으로 나가서 세팅된다
+    이유 : 마진은 바깥쪽으로 세팅하는 개념이고, 부모가 이를 세팅하지 않았다면
+           첫번째 블록박스에서 마진을 세팅할 수 있도록 기본 설계되어있다.
+    -> 패딩을 주는 순간 자식의 마진은 패딩의 내부공간을 밀게 된다.*/
+}
+
+/* 작품 타이틀 */
+.work h4{       /* '오늘의 작품&느낌' 꾸미기 */
+    font-family: "Black And White Picture", System-ui;
+    font-weight: normal;
+    font-size: 28px;
+    color: #fb4b4b;
+
+    margin: 0;
+    /* 부모의 패딩이 없는 상태에서 첫번째 자식마진은 부모 바깥으로 나간다.
+    참고) 마지막 자식블록요소도 부모박스 하단 마진은 바깥으로 나간다. */
+}
+
+.work figure{
+    color :rgb(0, 251, 255);       /* '뭉크의 절규'에 색깔 넣어봄ㅎㅎ */
+}
