--- a/001.HTML학습/02.info_PJ/css/sub.css
+++ b/001.HTML학습/02.info_PJ/css/sub.css
@@ -316,12 +316,32 @@ h2.sub-title{
     background-image: linear-gradient(-45deg, rgb(255, 127, 127) 10%, rgb(248, 246, 206) 50%, rgb(255, 174, 0));
 
     /* padding */
-    padding: 1px;
+    padding: 20px;
+    border: 13px dotted #fb4b4b;    /* 테두리 점선 */
     /* 
     부모박스에 패딩이 없는 상태에서 첫번째 자신 블록박스의 마진은 부모 바깥쪽으로 나가서 세팅된다
     이유 : 마진은 바깥쪽으로 세팅하는 개념이고, 부모가 이를 세팅하지 않았다면
            첫번째 블록박스에서 마진을 세팅할 수 있도록 기본 설계되어있다.
     -> 패딩을 주는 순간 자식의 마진은 패딩의 내부공간을 밀게 된다.*/
+
+   /*
+   [배경관련 표시 영역지정 : background-clip]
+    값 : border-box 보더 영역까지 표시(기본값)
+    값 : padding-box 패딩 영역까지 표시
+    값 : content-box 내용 영역까지 표시 */
+    
+    background-clip: border-box;        /* 배경색 관련 영역지정 */
+
+    /*
+    [배경관련 시작 영역 지정 : background-origin]
+    값 : border-box 보더 영역부터 시작
+    값 : padding-box 패딩 영역부터 시작(기본값)
+    값 : content-box 내용 영역부터 시작 */
+
+    background-origin: padding-box;    /* 배경이미지 관련 영역지정.. 어디까지 테두리라고 할건지.. 패딩박스까지 테두리라고 할거라고... 주석처리 해보면 앎 */
+
+    /* 배경 반복 제거 */
+    background-repeat: no-repeat;
 }
 
 /* 작품 타이틀 */
