--- a/900.인트로사이트/css/main.css
+++ b/900.인트로사이트/css/main.css
@@ -8,7 +8,9 @@ html,body{
 }
 body{
     background-image: url(../../001.HTML학습/02.info_PJ/images/index_FrontEnd.jpg);
-    /* 아카이브 페이지에 이미지 넣고싶은데 문제 없어보이는데 반응을 안해 */
+    background-repeat: no-repeat;
+    text-align: center;
+    background-position: center;
 
     /* background-image: 
     linear-gradient(to bottom, rgb(205, 255, 227), rgb(247, 206, 255)); */
