--- a/001.HTML학습/02.info_PJ/css/sub.css
+++ b/001.HTML학습/02.info_PJ/css/sub.css
@@ -397,7 +397,7 @@ h2.sub-title{
     /* 줄간격 : lh */
     line-height: 2.5;
     /* 글자색 : c */
-    color: 222px;
+    color: #222;
     /* 밑줄 없앰 : tdn */
     text-decoration: none;
 }
@@ -557,7 +557,77 @@ border-radius: 20px;
 }
 
 /* 사진 뉴스 테이블 */
+/* 테이블은 기본적으로 내용만큼 가로크기를 가지며, 부모박스의 크기가 작아질 경우 그 크기에 맞춰진다 */
 .photo-news table{
-    max-width: 500px;
+    max-width: 600px;
     /* 최대 width 지정시 부모박스가 이 크기보다 작아질 때 auto로 전환됨 */
+
+    /* 테이블 중앙 - 마영오! (블록, 테이블 모두 공통) */
+    margin: 0 auto;
+
+    /* 테두리 */
+    border: 2px solid #ccc;
+
+    /* (정확한 수치화를 위해)테이블 기본 간격 없앰 */
+    border-collapse: collapse;
+    /* separate 기본값(사이간격있음) */
+    /* -> table 태그에 border='1'로 확인 가능 */
+}
+
+/* tr이나 td에 child 선택자 사용 가능
+왜? table tr td 정해짐! 같은 종류의 형제요소들만 올 수 있음 */
+
+/* 첫 번째 td - 숫자부분 */
+.photo-news td:first-child{
+    /* 가로크기 */
+    width: 50px;
+    /* 세로크기 */
+    height: 84px;
+    /* 글자중앙 */
+    text-align: center;
+    /* 배경색 */
+    background-color: #ccc;
+}
+
+/* 두 번째 td - 기사제목링크 */
+.photo-news td:nth-child(2){
+    /* 배경색 : bgc */
+    background-color: #e4e4e4;
+    /* 패딩양쪽 */
+    padding: 0 20px;
+}
+
+/* 세 번째 td */
+.photo-news td:last-child{
+    /* 배경색 : bgc */
+    background-color: #e4e4e4;
+}
+
+/* 사진뉴스 이미지 */
+.photo-news img{
+    height: 70px;
+    /* 이미지 높이값만 주면 가로크기는 자동 */
+    vertical-align: middle;
+}
+
+/* 사진뉴스 두번째 tr부터 마진탑넣기 */
+.photo-news tr+tr td{
+    border-top: 2px solid #ccc;
+}
+
+/* 사진뉴스 기사링크 2줄 말줄임표시 세팅하기*/
+.photo-news td:nth-child(2) a {
+    /* 말줄임표시 (2줄) */
+    /* 1. 넘치는 컨텐츠 숨기기 */
+    overflow: hidden;
+    /* 2. 넘치는 글 말줄임 표시 */
+    text-overflow: ellipsis;
+    /* 3. display를 -webket-box로 변경 */
+    display: -webkit-box;
+    /* 4. 말줄임표시 라인설정 */
+    -webkit-line-clamp: 2;
+    /* 5. 기준축 진행방향 설정 */
+    -webkit-box-orient: vertical;
+    /* 줄간격 변경 */
+    line-height: 1.5;
 }
