--- a/900.인트로사이트/css/main.css
+++ b/900.인트로사이트/css/main.css
@@ -8,58 +8,89 @@ html{
 }
 
 /* 마진, 패딩 초기화 */
-html,body, h1, h2, h3, p {
+html,body, h1, h2, h3, p, ul, ol {
     margin: 0;
     padding: 0;
 }
-
+ul, ol {
+    list-style: none;
+    /* 리스트 스타일 없앰 */
+}
 
 html,body,.page{
     height: 100%;   /* 높이값 보이는 화면 기준 채우기 */
 }
 
-body{
+#pg1{
     background:
-    url(../../001.HTML학습/02.info_PJ/images/index_FrontEnd.jpg) no-repeat fixed center;
-    /* 만약 화면에 사진이 꽉 차게 하고싶으면 윗줄 맨 마지막 center 뒤에 /cover를 붙여서 center/cover;가 되게 할 것 */
-    
-    /* no-repeat, center; */
-    /* background-repeat: no-repeat;   // 위에 no-repeat 했으니까 이건 주석 */
-    /* text-align: center; */
-    /* background-position: center;    //위에 center 했으니까 이건 주석 */
+    url(../../001.HTML학습/02.info_PJ/images/sunset.jpg) no-repeat fixed center/cover;
+}
+#pg2{
+    background:
+    url(../../001.HTML학습/02.info_PJ/images/study.jpg) no-repeat fixed center/cover;
+}
 
-    /* background-image: 
-    linear-gradient(to bottom, rgb(205, 255, 227), rgb(247, 206, 255)); */
+/* 상단영역 */
+.top-area {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #ffffff79;
+    padding: 20px 0;    /* 패딩 : 위아래만 */
+    z-index: 999;   /* 상단박스 맨 위(999) */
+}
 
-    /*
-    [선형 그라데이션] 
-    background-image:
-    liner-gradient(방향, 색1, 색2, 색3, ...)
-    - 방향:
-    to top, to left, to right, to bottom
-    */
+/* 로고박스 */
+.logo {
+    text-align: center;
 }
 
 /* 메뉴박스 */
 .menu{
-    width: 600px;
+    width: 700px;
     margin: 0 auto;
-    background-color: hsl(203, 90%, 72%, 0.2);
+    /* background-color: hsl(203, 90%, 72%, 0.2); */
     padding: 15px;
 }
 
-/* 메뉴 하위 h1, h2 옆으로 흐르게 display 변경하기 */
-.menu>*{
-    display: inline-block;
+/* clear설정 */
+.menu ul::after{
+    content:'';
+    display: block;
+    clear: both;
 }
+
+/* 각 리스트 */
+.menu li{
+    float: left;    /* 블록요소 옆으로 흐르게 */
+    width: 50%;
+    text-align: center;
+    font-size: 30px;
+}
+
+/* 메뉴 a요소 : 글자색변경, 밑줄없앰 */
+.menu a{
+color: #222;
+    text-decoration: none;
+}
+
+/* 메뉴오버시 */
+.menu a:hover{
+color: hotpink;
+text-decoration: overline;
+text-decoration-style: wavy;
+}
+
 
 /* 컨텐츠박스 */
 .link-box{
+    position: relative;
+    top: 40%;
     border: 2px dashed darkblue;
     border-radius: 20px;
     width: 600px;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
-    background-color: aliceblue;
+    background-color: rgba(240, 248, 255, 0.499);
 }
