--- a/001.HTML학습/03.Robot_PJ/css/robot.css
+++ b/001.HTML학습/03.Robot_PJ/css/robot.css
@@ -3,7 +3,7 @@
 /* Robot PJ 메인 CSS - robot.css */
 
 /* 웹폰트 CDN */
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Black+Ops+One&family=Chakra+Petch&family=Orbitron:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow&family=Black+Ops+One&family=Chakra+Petch&family=Orbitron:wght@500&display=swap");
 
 /* 
     font-family: 'Barlow', sans-serif;
@@ -12,134 +12,206 @@
     font-family: 'Orbitron', sans-serif;
 */
 
-
 /* 초기화 : 마진0, 패딩0 */
-html,body,h1,h2,h3,ul,ol{
-    margin: 0;
-    padding: 0;
+html,
+body,
+h1,
+h2,
+h3,
+ul,
+ol {
+	margin: 0;
+	padding: 0;
 }
 /* 전체 배경이미지 */
 body {
-    background: url(../images/bg.jpg) no-repeat fixed top/cover;
+	background: url(../images/bg.jpg) no-repeat fixed top/cover;
 }
 
 /* 공사중 표시 */
 body * {
-    outline: 2px dashed yellow;
+	outline: 2px dashed yellow;
 }
 
 /**************** 공통 클래스 ****************/
 /* 메탈배경 클래스 */
-.metal1{
-    background: url(../images/metal01.jpg)no-repeat center/cover;
+.metal1 {
+	background: url(../images/metal01.jpg) no-repeat center/cover;
 }
-.metal2{
-    background: url(../images/metal02.jpg)no-repeat center/cover;
+.metal2 {
+	background: url(../images/metal02.jpg) no-repeat center/cover;
 }
-
-
 
 /**************** 1.상단영역 ****************/
 
 /**************** 2.메인영역 ****************/
 
 /* 2-1.로봇박스 */
-.robot-box{
-
+.robot-box {
 }
 /* 2-2.로봇머리 */
-.head{
-    position: relative;
-    /* 부모자격 - .eye의 부모 */
-    width: 250px;
-    height: 250px;
-    /* 특정 크기를 가지는 블록요소를 가로중앙으로 이동하기 - 마영오 */
-    margin: 0 auto;
+.head {
+	position: relative;
+	/* 부모자격 - .eye의 부모 */
+	width: 250px;
+	height: 250px;
+	/* 특정 크기를 가지는 블록요소를 가로중앙으로 이동하기 - 마영오 */
+	margin: 0 auto;
 
-    /* 모서리 라운드 처리 */
-    border-radius: 100px 100px 130px 130px; /* 왼쪽 위부터 시계 방향 */
+	/* 모서리 라운드 처리 */
+	border-radius: 100px 100px 130px 130px; /* 왼쪽 위부터 시계 방향 */
 }
 
 /* 눈 공통 */
-.eye{
-    position: absolute;
-    top: 70px;
-    /* 부모는? .head */
-    /* 크기공통 */
-    width: 50px;
-    height: 50px;
-    /* 배경공통 */
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-color: #fff;
+.eye {
+	position: absolute;
+	top: 70px;
+	/* 부모는? .head */
+	/* 크기공통 */
+	width: 50px;
+	height: 50px;
+	/* 배경공통 */
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	background-color: #fff;
 
-    border-radius: 50%;    /* 둥근 눈 */
-    border: 4px double #000    /* 이중테두리 */;
+	border-radius: 50%; /* 둥근 눈 */
+	border: 4px double #000 /* 이중테두리 */;
 }
 /* 왼눈 */
-.eye1{
-    left: 50px;
-    background-image: url(../images/e1.jpg);
+.eye1 {
+	left: 50px;
+	background-image: url(../images/e1.jpg);
 }
 /* 오른눈 */
-.eye2{
-    right: 50px;
-    background-image: url(../images/e2.jpg);
+.eye2 {
+	right: 50px;
+	background-image: url(../images/e2.jpg);
 }
 
 /* 코 (내가함ㅎㅎ) */
-.nose{
-    position: absolute;
-    top: 110px;
-    left: 100px;
-    width: 50px;
-    height: 60px;
-    border-radius: 20%;
-    background: url(../images/nose.jpg)no-repeat center/cover;
+.nose {
+	position: absolute;
+	top: 110px;
+	left: 100px;
+	width: 50px;
+	height: 60px;
+	border-radius: 20%;
+	background: url(../images/nose.jpg) no-repeat center/cover;
 }
 
 /* 입 (내가함ㅎㅎ) */
-.mouth{
-    position: absolute;
-    top: 170px;
-    left: 73px;
-    width: 100px;
-    height: 60px;
-    background: url(../images/mouth.png)no-repeat center/cover;
+.mouth {
+	position: absolute;
+	top: 170px;
+	left: 73px;
+	width: 100px;
+	height: 60px;
+	background: url(../images/mouth.png) no-repeat center/cover;
 }
 
 /* 귀공통 */
-.ear{
-position: absolute;
-top: 80px;
-width: 80px;
-height: 90px;
+.ear {
+	position: absolute;
+	top: 80px;
+	width: 80px;
+	height: 90px;
 }
 
 /* 왼귀 */
-.ear1{
-    left: -58px;
-    border-radius: 70px 0 0 70px;
-    /* background-image: url(../images/ear.png)no-repeat center/cover; */
+.ear1 {
+	left: -58px;
+	border-radius: 70px 0 0 70px;
+	/* background-image: url(../images/ear.png)no-repeat center/cover; */
 }
 /* 오른귀 */
-.ear2{
-    right: -58px;
-    border-radius: 0 70px 70px 0;
+.ear2 {
+	right: -58px;
+	border-radius: 0 70px 70px 0;
 }
-
 
 /* 2-1.2 몸통 */
-
-.body{
-    position: relative;
-    /* 부모자격 - 하위직계 자식 div들 */
-    width: 220px;
-    height: 400px;
-    /* 마영오~! */
-    margin: 0 auto;
-    margin-top: 50px;
+.body {
+	position: relative;
+	/* 부모자격 - 하위직계 자식 div들 */
+	width: 220px;
+	height: 400px;
+	/* 마영오~! */
+	margin: 0 auto;
+	margin-top: 50px;
+	/* 배경이미지 조정 */
+	background-repeat: repeat;
+	background-size: 50%;
 }
+	/* 목 */
+	.neck {
+		position: absolute;
+		top: -50px;
+		left: calc(50% - 50px/2); /* 사칙연산은 반드시 띄어쓰기 필 */
+		/* 
+    [가로/세로 중앙보내기 계산법]
+    top : calc(50% - 크기/2)
+    left: calc(50% - 크기/2) 
+     -> 크기는 left일 경우 width고
+        top일 경우 height 값이다.
+    */
+		width: 50px;
+		height: 50px;
+	}
 
+	/* 팔 공통 */
+	.arm {
+		position: absolute;
+		top: 0;
+		/* 부모는? .body */
+		width: 50px;
+		height: 200px;
+	}
+
+	/* 팔 하단 공통 */
+	.arm span {
+		position: absolute;
+		/* 부모는? .arm */
+		top: 100%;
+		left: 10%;
+		width: 80%;
+		height: 80%;
+	}
+
+	/* 왼팔 */
+	.arm1 {
+		left: -50px;
+	}
+	/* 오른팔 */
+	.arm2 {
+		right: -50px;
+	}
+
+	/* 다리 공통 */
+	.leg {
+		position: absolute;
+		top: 100%;
+		/* 부모는? .body */
+		width: 70px;
+		height: 200px;
+	}
+
+    /* 다리 하단 공통 */
+    .leg span {
+        position: absolute;
+        /* 부모는? .leg */
+        top: 100%;
+        left: 10%;
+        width: 80%;
+        height: 80%;
+    }
+	/* 왼다리 */
+	.leg1 {
+		left: 0px;
+	}
+	/* 오른다리 */
+	.leg2 {
+		right: 0px;
+	}
 
 /* ******************3.하단영역**************** */
