--- a/001.HTML학습/03.Robot_PJ/css/robot.css
+++ b/001.HTML학습/03.Robot_PJ/css/robot.css
@@ -23,6 +23,10 @@ ol {
 	margin: 0;
 	padding: 0;
 }
+/* HTML 루트 설정 */
+html{
+	font-size: 10px;
+}
 /* 전체 배경이미지 */
 body {
 	background: url(../images/bg.jpg) no-repeat fixed top/cover;
@@ -43,13 +47,34 @@ body * {
 }
 
 /**************** 1.상단영역 ****************/
+h1.logo {
+	position: fixed;
+	top: calc(50% - 10vw);
+	left: calc(50% - 10vw);
+	width: 20vw;
+	height: 20vw;
+	border-radius: 50%;
+	z-index: 999;
+	background: pink url(../images/robot_03.png) no-repeat center/auto 100%;
+	box-shadow: inset 0 0 20px 5px #000, 0 0 20px 5px #ffcf7b;
+
+	/* 글자설정 */
+	text-align: center;
+	line-height: 20vw;
+    font-family: 'Orbitron';
+	font-size: 5vw;
+	color: lightgreen;
+	text-shadow: 0 0 10px #000;
+	
+}
+
 
 /**************** 2.메인영역 ****************/
 
 /* 2-1.로봇박스 */
 .robot-box {
 	padding-top: 200px;
-	margin-bottom: 200px;
+	margin-bottom: 560px;
 }
 /* 2-2.로봇머리 */
 .head {
@@ -157,8 +182,9 @@ body * {
 	margin: 0 auto;
 	margin-top: 50px;
 	/* 배경이미지 조정 */
-	background-repeat: repeat;
-	background-size: 50%;
+	/* background-repeat: repeat; */
+	background-size: 80%;
+	
 }
 
 /* 몸통 가상요소로 상의 만들기 */
@@ -171,19 +197,20 @@ body * {
 	width: 110%;
 	height: 55%;
 	background-image: linear-gradient(to bottom, rgb(255, 255, 149), #fa68ff);
-	border-radius: 30px;
+	border-radius: 30% 30% 30% 30%;
 }
+
 /* 몸통 가상요소로 하의 만들기 */
 .body::after{
 	content: '';
 	position: absolute;
 	/* 부모는? .body */
 	bottom: -25%;
-	left: -5%;
-	width: 110%;
+	left: 0;
+	width: 100%;
 	height: 60%;
 	background-image: linear-gradient(to bottom, rgb(255, 163, 163), #ffcf7b);
-	border-radius: 10px;
+	border-radius: 10% 10% 0 0;
 }
 
 /* 목 */
@@ -438,4 +465,113 @@ body * {
 	height: 101px;
 }
 
+/* 2-2. 로봇설명박스 */
+.text-box{
+	max-width: 800px;
+	margin: 0 auto;
+	color: #fff;
+	padding: 15px 30px;
+	background-color: #0000006f;
+	border-radius: 20px;
+/* 박스 내부그림자 */
+	box-shadow:
+	inset 0 0 20px blue,
+	inset 0 0 50px 10px cyan;
+	
+	
+	
+	/* 
+	[백드롭 필터효과]
+	- filter 속성과 동일한 세팅을 가지며, 적용대상이 겹쳐지는 하단의 그래픽을 적용한다.
+	
+	<filter-function> 값
+	backdrop-filter: blur(2px);			-> 흐림
+	backdrop-filter: brightness(60%);	-> 밝기
+	backdrop-filter: contrast(40%);		-> 대비
+	backdrop-filter: drop-shadow(4px 4px 10px blue); -> 그림자
+	backdrop-filter: grayscale(30%);	-> 흑백
+	backdrop-filter: hue-rotate(120deg);-> 휴(HUE). 색상변경
+	backdrop-filter: invert(70%);		-> 반전색
+	backdrop-filter: opacity(20%);		-> 투명도
+	backdrop-filter: sepia(90%);		-> 세피아효과
+	backdrop-filter: saturate(80%);		-> 채도
+	
+	- 다중 필터(복합적용 가능)
+	backdrop-filter: url(filters.svg#filter) blur(4px) saturate(150%);
+	*/
+	backdrop-filter: blur(6px);
+	
+}
+
+/* 2-2-1. 제목 */
+.text-box h2 {
+	position: sticky;
+	top: 10px;
+	/* em단위를 이용해서 글자크기 35px */
+	font-size: 3.5rem;
+	font-family: 'Chakra Petch', sans-serif;
+	text-align: center;
+	background-color: #ffe8e893;
+	color: lime;
+	text-shadow: 2px 2px 2px #0000006f;
+	border-radius: 20px;
+	/* 글자 얇게 */
+	font-weight: normal;
+}	
+
+/* 2-2-2. 출처 */
+	.text-box small {
+	/* 인라인은 디자인상 블록으로 전환 */
+	display: block;
+	text-align: center;
+	/* 글자크기 12px */
+	font-size: 1.2rem;
+	font-family: 'Chakra Petch', sans-serif;
+	color: yellow;
+	text-shadow: 1px 1px 1px #0000006f;
+	padding: 10px;
+	}
+
+/* 2-2-3. 내용단락 */
+	.text-box p{
+	font-family: 'Barlow';
+	font-size: 1.7rem;
+	/* 줄간격 */
+	line-height: 1.7;
+	/* 자간 */
+	letter-spacing: 1px;
+	/* 단어간격 */
+	word-spacing: 2px;
+
+	/* 
+	[다단설정하기]
+	다중열속성
+	- column-count : 다중열개수
+	- column-rule : 다중열구분선
+	- column-gap : 다중열사이간격
+	*/
+	/* 다단수 세팅 */
+	column-count: 3;
+	/* 사이구분선은 border와 유사 */
+	column-rule: 5px dotted lightgreen;
+	/* column-rule: 두께 종류 색; */
+	/* 사이간격 */
+	column-gap: 55px;
+
+	/* 양쪽정렬 */
+	text-align: justify;
+	/* 영문자는 단어를 깨줘야함 */
+	word-break: break-all;
+	
+	/* 첫줄 들여쓰기 : text-indent (ti) */
+	text-indent: 40px;
+}
+	
+
+	/* 가상요소 첫글자 변경하기 */
+	.text-box p::first-letter{
+		font-size: 3.8rem;
+		color: #fa68ff;
+		font-weight: bold;
+	}
 /* ******************3.하단영역**************** */
