--- a/001.HTML학습/05.Nav_PJ/css/nav01.css
+++ b/001.HTML학습/05.Nav_PJ/css/nav01.css
@@ -2,6 +2,9 @@
 
 /* 네비게이션 유형1 CSS - nav01.css */
 
+/* 12그리드 불러오기 */
+@import url(./grid_12_float.css);
+
 
 html,
 body,
@@ -17,7 +20,7 @@ h1.tit {
 /* 전체 body */
 body {
     color: #fff;
-    background: navy url(../images/nav01.png) no-repeat fixed center/cover;
+    background: #0a134e url(../images/nav01.png) no-repeat fixed center/cover;
 }
 
 /* ul, ol 초기화 */
@@ -53,3 +56,14 @@ ul::after,ol::after,.clb::after{
     padding: 0 32px;
 }
 
+
+/* 메인영역 */
+.main-area {
+    max-width: 1000px;
+    min-height: 600px;
+    line-height: 600px;
+    text-align: center;
+    font-size: 2.5vw;
+    border: 10px dashed lightgreen;
+    margin: 100px auto;
+}
