--- a/001.HTML학습/05.Nav_PJ/css/nav01.css
+++ b/001.HTML학습/05.Nav_PJ/css/nav01.css
@@ -20,7 +20,7 @@ h1.tit {
 /* 전체 body */
 body {
     color: #fff;
-    background: #0a134e url(../images/nav01.png) no-repeat fixed center/cover;
+    background: #0a134e url(../images/nav1bg.png) no-repeat fixed center/cover;
 }
 
 /* ul, ol 초기화 */
@@ -49,11 +49,145 @@ ul::after,ol::after,.clb::after{
     margin: 0 auto;
     outline: 2px dashed lime;
 }
+
+/* 로고박스 */
+.logo{
+    padding: 13px;
+}
+
 /* GNB 메뉴 */
-.gnb li {
+.gnb{
+    margin-left: 63px;
+}
+/* GNB 메뉴 하위 a요소 */
+.gnb a{
+    display: block;
+    /* 블록요소로 확장설정함 */
+}
+
+/* 상위메뉴만 적용하기
+직계자식(>) 선택으로 상위메뉴만 선택함 */
+.gnb ul > li {
     float: left;
     line-height: 78px;
     padding: 0 32px;
+    font-weight: bold;
+    /* 글자관련 세팅은 하위요소로 모두 상속됨 */
+
+    /* 부모자격 - .smenu의 left값 */
+    position: relative;
+}
+
+/* 서브메뉴 */
+.smenu {
+    position: absolute;     /* 하위메뉴 숨기기 위한 준비 */
+    left: 50%;
+    /* x축 중앙이동 */
+    transform: translateX(-50%);
+    
+    width: 200px;
+    background-color: #00000050;
+    border-radius: 10px;
+    box-shadow: inset 0 0 10px lightskyblue;    /* 박스 불빛나오기 */
+    
+    text-align: center;
+    line-height: 38px;
+    /* 패딩이 있으면 높이값이 0이어도 숨기기가 안됨!
+    그래서 하위 요소인 ol태그에 패딩 줌 */
+    /* padding: 10px; */
+
+    /* 상속된 bold체를 normal로 변경 */
+    font-weight: normal;
+
+    /* 숨기기 장치 */
+    /* height: 0; */
+    max-height: 0;
+    overflow: hidden;
+    
+    /* 트랜지션 : heifht -> max-hright 속성 변경 */
+    transition: max-height .4s;
+}
+/* 상위 li 오버시 서브메뉴 보이기 */
+.gnb ul>li:hover .smenu{
+    max-height: 210px;
+    /* max-height로 세팅하는 원리 : 최대높이값은 컨텐츠 내용이 적을 때 auto하게 내용물만큼만 높이값이 세팅된다.
+    따라서 세팅높이값은 최대로 세팅해야하는 높이값으로 세팅하면 더 작은 높이값은 자동으로 세팅된다.
+    (단, 작은 크기는 시간이 짧게 표현됨) */
+
+    /* height: 210px; */
+    /* height: auto; */
+    /* 높이값 변경 트랜지션 주의사항
+    -> auto로 세팅하면 특정 크기로 변경할 때만 적용되는 트랜지션이 적용되지 않음(바로나옴)
+    height 세팅시에는 변할 실제 크기를 세팅해야 함
+    -> 각 상위 li별로 높이값을 각각 세팅해야하는 번거로움이 있다.
+    */
+}
+
+/* 예시로 5번째 높이값 개별세팅 */
+/* .gnb ul>li:nth-child(5):hover .smenu{
+    height: 58px;
+} */
+
+.smenu ol{
+    padding: 10px;
+}
+/* 서브메뉴 li 순서대로 나타내기 */
+.smenu li{
+    opacity: 0;     /* 투명하게 */
+    transition: all .4s;    /* 상세메뉴 글자 점점 진하게 */
+}
+/* 상위메뉴 오버시 */
+.gnb ul>li:hover .smenu li{
+    opacity: 1;
+}
+/* 하위메뉴 a요소에 투명도 조정 */
+.gnb ul>li .smenu li a{
+    opacity: .7;
+    transition: .3s;
+}
+/* 하위메뉴 a요소에 오버시 */
+.gnb ul>li .smenu li a:hover{
+    opacity: 1;
+    font-weight: bold;
+}
+/* 오버시 li 순서별 트랜지션 delay 주기 */
+.gnb ul>li:hover .smenu li:nth-child(2){
+    transition-delay: .2s;
+}
+.gnb ul>li:hover .smenu li:nth-child(3){
+    transition-delay: .3s;
+}
+.gnb ul>li:hover .smenu li:nth-child(4){
+    transition-delay: .4s;
+}
+.gnb ul>li:hover .smenu li:nth-child(5){
+    transition-delay: .5s;
+}
+
+
+.gnb ul>li>a{
+    /* 가상요소 밑줄을 주기 위해 a한테 부모자격 주기 */
+    position: relative;
+}
+/* GNB 상위메뉴 오버시 밑줄애니 */
+.gnb ul>li>a::after{
+    content: '';
+    position: absolute;
+    /* 앱솔루트는 자동블록됨 */
+    left: 100%; /* 마우스 나갈 때 left값 밀기 */
+    top: 55px;
+    width: 0;
+    height: 2px;
+    background-color: rgb(255, 255, 255);
+    /* 아웃시 트랜지션 */
+    transition: .3s;
+}
+/* 오버시 밑줄 애니 */
+.gnb ul>li:hover>a::after{
+    left: 0;
+    width: 100%;
+    /* 오버시 트랜지션->>>left는 트랜지션 적용 말것 */
+    transition: width .3s;
 }
 
 
