--- a/001.HTML학습/03.Robot_PJ/css/robot_ani.css
+++ b/001.HTML학습/03.Robot_PJ/css/robot_ani.css
@@ -166,3 +166,61 @@
     }
 }
 
+
+/*  로봇 다리 작동 애니 (강사님 ver)
+.leg{
+    animation: leg-ani .3s ease-in-out 4s 12 alternate;
+    // 0.3초 애니시간으로 4초 후에 12번 작동.
+    // alternate때문에 반대로 작동하는 횟수가 더해짐
+    // from->to 6회 / to-from 6회
+}
+// 한쪽 다리는 올라간 다음 올라가야 하므로 애니 시작 지연시간을 준다.
+
+.leg2{
+    // 한 방향이 0.3초이므로 0.3초만 기다리면 됨!
+    + 전체 기다림 시간 4초를 더함
+    animation-delay: .3s
+
+@keyframes leg-ani {
+    to{
+        top: 76%;
+    }
+}
+ */
+
+
+ /* 팔 공통 transform 세로축 기준 top으로 변경 */
+ .arm,
+ .arm span,
+ .arm span::after{
+     transform-origin: top;  /* tfo. 회전 기준축 */
+ }
+/* 4. 로봇 왼팔 허리에 올리기 */
+.arm1{
+    animation: left-arm-ani1 .4s 5s forwards;   
+}
+@keyframes left-arm-ani1 {
+    to{
+        transform: rotate(40deg);   /* 회전 */
+    }
+}
+/* 왼쪽팔 하단 들기 */
+.arm1 span{
+    animation: left-arm-ani2 .4s 5s forwards;   
+    /* animation: left-arm-ani2 .5s 5s forwards infinite;    */
+}
+@keyframes left-arm-ani2 {
+    to{
+        transform: rotate(-100deg);   /* 회전 */
+    }
+}
+/* 왼쪽손 들기 */
+.arm1 span::after{
+    /* animation: left-arm-ani2 .4s 5s forwards;    */
+    animation: left-arm-ani3 .5s 5s forwards;   
+}
+@keyframes left-arm-ani3 {
+    to{
+        transform: rotate(30deg);   /* 회전 */
+    }
+}
