--- a/001.HTML학습/03.Robot_PJ/css/robot.css
+++ b/001.HTML학습/03.Robot_PJ/css/robot.css
@@ -26,6 +26,9 @@ ol {
 /* HTML 루트 설정 */
 html{
 	font-size: 10px;
+	/* rem단위 글자계산 편의 위해 */
+	scroll-behavior: smooth;
+	/* 부드러운 스크롤 애니이동 */
 }
 /* 전체 배경이미지 */
 body {
@@ -34,9 +37,10 @@ body {
 }
 
 /* 공사중 표시 */
-body * {
+/* body * {
 	outline: 2px dashed yellow;
-}
+
+} */
 
 /**************** 공통 클래스 ****************/
 /* 메탈배경 클래스 */
@@ -48,6 +52,7 @@ body * {
 }
 
 /**************** 1.상단영역 ****************/
+/* 1-1. 로고 */
 h1.logo {
 	position: fixed;
 	top: calc(50% - 10vw);
@@ -69,18 +74,138 @@ h1.logo {
 	
 }
 
+/* 1-2. TOP 이동버튼 */
+.btn-top{
+	position: fixed;
+	bottom: 3vw;
+	right: 3vw;
+	width: 5vw;
+	height: 5vw;
+	border-radius: 50%;
+	border: 5px outset #fff;
+	background-color: #ccc;
+	z-index: 10;
+}
+/* a요소 확장 */
+.btn-top a{
+	display: block;
+	width: 100%;
+	height: 100%;
+
+	/* 글자세팅 */
+	color: blue;
+	text-decoration: none;
+	font: 1.5vw/4.5vw 'Black Ops One';
+	/* 스두크/줄체 */
+}
+/* 오버시 설정 */
+.btn-top:hover{
+	background-color: #ff0;
+	/* outset 나온버튼, inset 들어간버튼 */
+	block-size: inset;
+}
+.btn-top:hover a{
+	color: #f00;
+}
+
 
 /**************** 2.메인영역 ****************/
 
 /* 2-1.로봇박스 */ 
 .robot-box {
 	position: fixed;
-    top: 50px;
+    top: 60px;
     left: 50%;
-	margin-bottom: 560px; 
 	transform: translate(100%, -10%) scale(0.2); 
+	margin-bottom: 560px; 
+	/* 박스 내에 있는 모든 요소의 외곽선에 그림자(글로우) 효과 주기는 filter:drop-shadow()를 사용한다. */
+	filter: drop-shadow(0 0 20px aqua);
 }
-/* 2-2.로봇머리 */
+
+/* 2-1-0.로봇 말풍선 */
+.link-title{
+	position: absolute;
+	top: -5vw;
+	left: 20vw;
+	/* 로봇머리로부터 위치 일정하게 */
+	transform: translateX(200px) scale(1);
+	/* 로봇쪽에서 커지게 하기위해 트랜스폼 기준 변경(왼쪽아래) */
+	transform-origin: left bottom;
+	width: 40vw;
+	height: 20vw;
+	border-radius: 50%;
+	background-color: #fff;
+	text-align: center;
+	line-height: 20vw;
+	
+
+	text-decoration: none;
+	color: orangered;
+	font-size: 4vw;
+
+	border: 10px solid orangered;
+	box-sizing: border-box;
+
+	font-weight: bold;
+	}
+
+	/* 가상요소로 삼각형 만들기 */
+	.link-title::after{
+		content: '';
+		position: absolute;
+		top: 83%;
+		left: 3%;		/* 왜 %인가? 유동적인 부모를 기준한 위치값이다 */
+		transform: rotate(25deg);
+		/* 가로 세로 크기 0 */
+		width: 0;
+		height: 0;
+		/* 보더탑 크기+색 설정 */
+		border-top: 10vw solid orangered;	/* bottom면 역삼각형 */
+		/* 양쪽보더 크기+투명색 설정 */
+		border-left: 2vw solid transparent;
+		border-right: 2vw solid transparent;
+	}
+
+	/* 로봇 말풍선 오버시 */
+.link-title:hover{
+	color: #fff;
+	background-image: radial-gradient(circle, red 10%, blue 30%, yellow);
+}
+/* 
+    [ 원형 그라데이션 ]
+
+    - 기본형, 영역지정형은 박스모양을 따라감!
+
+    1) 기본형: 중앙중심, 모양은 박스크기에 맞춤
+    background-image: 
+        radial-gradient(색1,색2,색3,...);
+    - 시작색으로부터 중앙에서 시작됨
+
+    2) 영역 지정형:
+    background-image: 
+        radial-gradient(색1 몇%,색2 몇%,색3 몇%,...);
+    - 색 뒤에 한칸 띄고 %수치로 영역지정함
+
+    3) 그라데이션 모양을 원형으로 사용할 경우:
+    background-image: 
+        radial-gradient(circle,색1,색2,색3,...);
+    - circle 키워드를 첫번째에 사용함
+
+    4) 영역옵션 지정형: 중심점 변경
+    background-image: 
+        radial-gradient(옵션 at 가로위치 세로위치,색1,색2,색3,...);
+    - 옵션4가지 : closest-side / farthest-side
+                closest-corner / farthest-corner
+                ___________________________________
+                - closest는 중심점으로 좀더 모아진것
+                - farthest는 중심점에서 멀리 퍼진것
+                - side와 corner는 경계선과 끝부분옵션임
+    - 가로위치, 세로위치 (중심점) - 단위는 px / %
+*/
+
+
+
+/* 2-1-1.로봇머리 */
 .head {
 	position: relative;
 	/* 부모자격 - .eye의 부모 */
@@ -200,8 +325,8 @@ h1.logo {
 	left: 0;
 	width: 100%;
 	height: 55%;
-	background-image: linear-gradient(to bottom, rgb(255, 255, 149), #fa68ff);
-	border-radius: 30% 30% 30% 30%;
+	background-image: linear-gradient(to bottom, rgb(255, 255, 149), pink);
+	border-radius: 20% 20% 10% 10%;
 }
 
 /* 몸통 가상요소로 하의(치마) 만들기 */
@@ -259,6 +384,7 @@ h1.logo {
 	/* 부모는? .body */
 	width: 50px;
 	height: 220px;
+	z-index: 3;
 }
 
 /* 팔꿈치 원형 관절 가상요소 공통 */
@@ -389,7 +515,7 @@ h1.logo {
 	top: calc(100% - 70px/2);
 	left: -10%;
 	width: 120%;
-	height: 100%;
+	height: 90%;
 	z-index: 1;
 	background-image: linear-gradient(#c3c3c3, #3a3a3a);
 	border: 5px solid #000;
@@ -401,17 +527,16 @@ h1.logo {
 	content: " ";
 	position: absolute;
 	
-	top: 130%;
-	left: -10%;
-	width: 250%;
-	height: 50%;
+	top: 140%;
+	left: -15%;
+	width: 130%;
+	height: 35%;
 	z-index: 1;
 	background-image: linear-gradient(to right, #494949, #efefef);
 	border: 5px solid #000;
 	border-radius: 90% 90% 0 0;
 	box-sizing: border-box;
 }
-
 
 /* 팔 하단 가상요소 손 만들기 공통 */
 .arm span::after {
@@ -432,7 +557,6 @@ h1.logo {
 	background-image: url(../images/hand_right.png);
 	/* left위치값 */
 	left: -20px;
-	z-index: 999;
 }
 /* 오른손 */
 .arm2 span::after {
@@ -584,3 +708,25 @@ h1.logo {
 		font-weight: bold;
 	}
 /* ******************3.하단영역**************** */
+/* 3-1. 회사정보 */
+#bottom-area{
+	position: relative;		/* z-index를 적용시키기 위해 포지션줌 */
+	z-index: 100;
+	margin-top: 100px;
+	
+	color: #fff;
+	/* 글자크기 : 30px, 글자체 'Black Ops One' */
+	font: 3rem 'Black Ops One';
+	/* 글자 그림자 */
+	text-shadow: 2px 2px 2px #000;
+	/* 글자 중앙 */
+	text-align: center;
+	/* 패딩 : 가로/세로 중에서 작은 화면 기준 7% */
+	/* -> vmin(작은쪽기준), vmax(큰쪽기준) */
+	padding: 7vmin;
+	/* 반투명 배경 넣기 : 검은색 반투명(0.5) */
+	/* background-color: rgba(red, green, blue, alpha); */
+	background-color: rgb(0 0 0 / 0.5);	/* 0.5 반투명 */
+	/* rgb(0 0 0 / 0.5 ) -> 요즘 더 많이 사용함 
+	rgba(0,0,0,0.5) -> 옛날 방식 */
+}
